Non Graded Challenge Revisi

--- a/Phas_ 0/Week_1/h8dsft_looping.ipynb
+++ b/Phas_ 0/Week_1/h8dsft_looping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -10,28 +10,27 @@
      "output_type": "stream",
      "text": [
       "402\n",
+      "984\n",
       "360\n",
       "408\n",
+      "980\n",
       "544\n",
       "390\n",
+      "984\n",
       "592\n",
       "236\n",
+      "942\n",
       "386\n",
       "462\n",
       "418\n",
       "344\n",
       "236\n",
       "566\n",
+      "978\n",
       "328\n",
       "162\n",
       "758\n",
       "918\n",
-      "412\n",
-      "566\n",
-      "826\n",
-      "248\n",
-      "866\n",
-      "626\n",
       "done\n"
      ]
     }
@@ -45,11 +44,12 @@
     "978, 328, 615, 953, 345, 399, 162, 758, 219, \n",
     "918, 237, 412, 566, 826, 248, 866, 950, 626, \n",
     "949]\n",
+    "i = 0\n",
     "\n",
-    "for i in range(len(numbers)):\n",
-    "    if numbers[i] % 2 == 0:\n",
-    "        if numbers[i] <= 918:\n",
-    "            print(numbers[i])\n",
+    "for i in numbers[:numbers.index(237)]:\n",
+    "    if i % 2 == 0:\n",
+    "        print(f\"{i}\")\n",
+    "        i += 1\n",
     "print(\"done\")"
    ]
   },
