--- a/Phas_ 0/Week_1/h8dsft_looping.ipynb
+++ b/Phas_ 0/Week_1/h8dsft_looping.ipynb
@@ -55,6 +55,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1882288738.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/x9/8q15dpts6k7fkmqpl34bdnmw0000gn/T/ipykernel_932/1882288738.py\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    while i in numbers <= [:numbers.index(918)]:\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [951, 402, 984, 651, 360, 69, 408,\n",
+    "319, 601, 485, 980, 507, 725, 547, 544, 615,\n",
+    "83, 165, 141, 501, 263, 617, 865, 575, 219, \n",
+    "390, 984, 592, 236, 105, 942, 941, 386, 462, \n",
+    "47, 418, 907, 344, 236, 375, 823, 566, 597, \n",
+    "978, 328, 615, 953, 345, 399, 162, 758, 219, \n",
+    "918, 237, 412, 566, 826, 248, 866, 950, 626, \n",
+    "949]\n",
+    "\n",
+    "\n",
+    "i = 0\n",
+    "while i in numbers <= [:numbers.index(918)]:\n",
+    "    i += 1\n",
+    "    if i % 2 == 0:\n",
+    "        break # Break Statement\n",
+    "    print(numbers[i])\n",
+    "print('Loop ended.')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
