Non Graded Challenge 2

--- a/Phas_ 0/Week_1/h8dsft_converter.ipynb
+++ b/Phas_ 0/Week_1/h8dsft_converter.ipynb
@@ -1,34 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Assignment Instructions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(('kelvin to celsius: ', -183.14999999999998), ('celcius to kelvin: ', 338.15))\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(('kelvin to celsius: ', -183.14999999999998), ('celcius to kelvin:', 338.15))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Buatlah sebuah function yang dapat mengkonversi suhu dari kelvin ke celcius, dan celcius ke kelvin.\n",
     "\n",
     "def convert_temperature(kelvin,celsius): #function method\n",
-    "    celsius_temp = \"celcius to kelvin: \", celsius + 273.15 #merubah celcius ke kelvin\n",
+    "    celsius_temp = \"celcius to kelvin:\", celsius + 273.15 #merubah celcius ke kelvin\n",
     "    kelvin_temp = \"kelvin to celsius: \", kelvin - 273.15  #merubah kelvin ke celcius\n",
     "    return kelvin_temp, celsius_temp #memanggil function\n",
-    "print(convert_temperature(90,65)) #hasil\n",
-    "\n"
+    "convert_temperature(90,65) #hasil\n"
    ]
   },
   {
