--- a/Phas_ 0/Material/day1/Conditional_Looping.ipynb
+++ b/Phas_ 0/Material/day1/Conditional_Looping.ipynb
@@ -91,6 +91,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 lebih besar dari 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "angka = 15 \n",
+    "print(f\"{angka} lebih besar dari 10\")\n",
+    "#penambahan f terus di taruh {} akan menjadi variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -103,8 +129,9 @@
     }
    ],
    "source": [
+    "#the if condition is always boolean\n",
     "angka = 15\n",
-    "if True: #kondisi if is trie karena diawal abgka = 1\n",
+    "if True: #kondisi if is true karena diawal abgka = 1\n",
     "    print(f\"{angka} lebih besar dari 10\")"
    ]
   },
@@ -237,24 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(\"baris ini ada diluar if\") #kalo salah position bakal error\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "angka = 1\n",
     "if angka > 10: \n",
     "    print(f\"{angka} lebih besar dari 10\")\n",
     "    print(\"baris ini masih di dalam if\")\n",
-    " print(\"baris ini ada diluar if\") #kalo salah position bakal error"
+    "    print(\"baris ini ada diluar if\") #kalo salah position bakal error"
    ]
   },
   {
@@ -296,7 +314,7 @@
     "if angka > 10: \n",
     "    print(f\"{angka} lebih besar dari 10\")\n",
     "else: #else dan if harus sejajar \n",
-    "    print(f\"{angka} lebih kecil dari 10\")"
+    "    print(f\"{angka} lebih kecil dari 10\") "
    ]
   },
   {
@@ -452,6 +470,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 lebih besar dari 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#elif bisa lebih dari 3 kondisikalau lebih dari 2 kondisi selalu perbnayak elif\n",
+    "angka = 11\n",
+    "if angka > 10:\n",
+    "    print(f\"{angka} lebih besar dari 10\")\n",
+    "elif angka == 10: #bisa berkali kali dipaek there canbe more than one elif\n",
+    "    print(f\"{angka} sama dengan 10\")\n",
+    "else:\n",
+    "    print(f\"{angka} lebih kecil dari 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
@@ -517,7 +559,7 @@
     }
    ],
    "source": [
-    "makanan =  \"pempek\"\n",
+    "makanan =  \"pempek\" #xcase sensitive\n",
     "if makanan in menu:\n",
     "    print(f\"abangnya jual {makanan}\")\n",
     "else:\n",
@@ -547,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +607,7 @@
     "    if 'jeruk' in tukang_buah:\n",
     "        print(\"beli jeruk\")\n",
     "    else:\n",
-    "        Print(\"mampir aja\")\n",
+    "        print(\"mampir aja\")\n",
     "else:\n",
     "    print(\"cari yang lain bang\")"
    ]
@@ -684,6 +726,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nice\n",
+      "gpp belajar lagi\n"
+     ]
+    }
+   ],
+   "source": [
+    "nilai_bahasa=70\n",
+    "nilai_matematika=90\n",
+    "\n",
+    "if nilai_matematika > 80:\n",
+    "    print(\"nice\")\n",
+    "    if nilai_bahasa < 75:\n",
+    "        print(\"gpp belajar lagi\")\n",
+    "    else:\n",
+    "        print(\"waw slamat yaw\")\n",
+    "else:\n",
+    "    print(\"yaudah\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
@@ -778,41 +848,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nilai invavlid\n"
+     "ename": "AttributeError",
+     "evalue": "'float' object has no attribute 'isnumeric'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/x9/8q15dpts6k7fkmqpl34bdnmw0000gn/T/ipykernel_2455/4018533582.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mnilai\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnilai\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mnilai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnumeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# cek apakah input angka\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mnilai\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnilai\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m80\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'float' object has no attribute 'isnumeric'"
      ]
     }
    ],
    "source": [
     "nilai = input(\"masukkan nilai : \")\n",
-    "if nilai.isnumeric():\n",
-    "    #lanjut nanti\n",
-    "    if 0 <= nilai <= 100:\n",
-    "        if nilai > 80:\n",
+    "nilai= float(nilai)\n",
+    "#nilai.isnumeric() cek apakah nput angka\n",
+    "if 0 <= nilai <= 100:\n",
+    "    if nilai > 80:\n",
     "            print(\"nilai A\") \n",
-    "        elif nilai > 65:\n",
-    "            print(\"nilai B\")\n",
-    "        elif nilai > 40:\n",
-    "            print(\"nilai C\")\n",
-    "        elif nilai > 20:\n",
-    "            print(\"nilai D\")\n",
-    "        else:\n",
-    "            print(\"nilai E\")\n",
+    "    elif nilai > 65:\n",
+    "                print(\"nilai B\")\n",
+    "    elif nilai > 40:\n",
+    "                print(\"nilai C\")\n",
+    "    elif nilai > 20:\n",
+    "                print(\"nilai D\")\n",
     "    else:\n",
-    "        print(\"nilai invavlid\")"
+    "            print(\"nilai E\")\n",
+    "else:\n",
+    "    print(\"nilai invavlid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nilai =  input(\"masukkan nilai: \")\n",
+    "nilai = float(nilai)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nilai+ 5\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LOOPING"
+    "## LOOPING\n",
+    "\n",
+    "ada 2 jenis, while and for\n",
+    "\n",
+    "-while, selama memenuhi kondisi akan terus jalan "
    ]
   },
   {
@@ -1112,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1128,9 +1236,31 @@
    ],
    "source": [
     "#forloop membutuhkan tipe data majemuk instead of condition, untuk setiap yang ada di data majemuk bakal ke absen/print\n",
+    "#contoh kara majemuk untuk for loop adalah, list, tupple, dictionary\n",
     "tukang_buah = [\"sirsak\", \"pisang\", \"pepaya\", \"mangga\"]\n",
     "for buah in tukang_buah:\n",
     "    print(f\"abang jualan {buah}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abang jualan sirsak\n",
+      "abang jualan pisang\n",
+      "abang jualan pepaya\n",
+      "abang jualan mangga\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [0,1,2,3]: #a bit tedious\n",
+    "    print(f\"abang jualan {tukang_buah[i]}\")"
    ]
   },
   {
@@ -1197,6 +1327,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abang jualan sirsak\n",
+      "abang jualan pisang\n",
+      "abang jualan pepaya\n",
+      "abang jualan mangga\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(tukang_buah)):\n",
+    "    print(f\"abang jualan {tukang_buah[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
    "outputs": [
@@ -1215,7 +1366,7 @@
     "tukang_buah = ['sirsak', 'pisang', 'pepaya', 'mangga']\n",
     "ket = ['stok dikit', 'stok banyak', 'stok ga musim', 'stok lahi dikirkm']\n",
     "for i in range(len(tukang_buah)):\n",
-    "    print(f\"abang jualan {tukang_buah[i]}, ket :{ket[i]}\") #lanjut nanti"
+    "    print(f\"abang jualan {tukang_buah[i]}, ket :{ket[i]}\") #bakal keluar keterangan"
    ]
   },
   {
